--- a/notebook/README.ipynb
+++ b/notebook/README.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjmOgbejkiveRfISmpT7SJ",
+      "authorship_tag": "ABX9TyNQ34Nlro7MIBvC/RqsgsQe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,14 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# Welcome to DroughtCastAI Project!\n",
+        "data directory"
+      ],
       "metadata": {
-        "id": "7RHEB7VPLON8"
-      },
-      "outputs": [],
-      "source": []
+        "id": "rfPCwhiJNOfo"
+      }
     }
   ]
 }
