--- a/notebook/README.ipynb
+++ b/notebook/README.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQ34Nlro7MIBvC/RqsgsQe",
+      "authorship_tag": "ABX9TyNGn01DGIJZRiicnze6E5fD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,8 @@
       "cell_type": "markdown",
       "source": [
         "# Welcome to DroughtCastAI Project!\n",
-        "data directory"
+        "Data directory:\n",
+        "https://drive.google.com/drive/folders/1SN1gf8vUk0uPWEKRTR-uv9ZfQwoNv5DT"
       ],
       "metadata": {
         "id": "rfPCwhiJNOfo"
