--- a/notebook/gdal.ipynb
+++ b/notebook/gdal.ipynb
@@ -39,7 +39,7 @@
         "id": "z5pqBTSY1iVr",
         "outputId": "282b2c57-16b3-4c09-e969-52b949c06d71"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,7 +67,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +95,7 @@
         "id": "wMS5HfSW3Mwp",
         "outputId": "182e029c-9727-480d-b963-7b10cf274d21"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +155,7 @@
         "id": "uClkuidv8lQv",
         "outputId": "bd6775ba-ffd9-480b-91a3-f7f73fb81b78"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,7 +179,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,7 +203,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,9 +220,16 @@
         "import pandas as pd\n",
         "import os\n",
         "from pathlib import Path\n",
+        "\n",
+        "defaultscale=80000;\n",
+        "\n",
+        "if (defaultscale=50000) {\n",
         "input_directory_path = '/content/drive/MyDrive/DroughtCastAI/Dataset/ERA5'\n",
         "output_directory_path = '/content/drive/MyDrive/DroughtCastAI/Dataset/ERA5_OUTPUT'\n",
-        "\n",
+        "}else{\n",
+        "    input_directory_path = '/content/drive/MyDrive/DroughtCastAI/Dataset100K/Data_Raw'\n",
+        "    output_directory_path = '/content/drive/MyDrive/DroughtCastAI/Dataset100K/Data_XYZ'\n",
+        "}\n",
         "input_directory_files = os.listdir(input_directory_path)\n",
         "input_directory_files.sort()\n",
         "print(\"All files in the directory:\",input_directory_files);\n",
@@ -245,7 +252,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +279,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +321,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,7 +649,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -759,7 +766,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1008,7 +1015,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
