--- a/notebook/gdal.ipynb
+++ b/notebook/gdal.ipynb
@@ -729,8 +729,13 @@
     {
       "cell_type": "code",
       "source": [
-        "input_directory_path2 = '/content/drive/MyDrive/DroughtCastAI/Dataset/ERA5_OUTPUT'\n",
-        "output_directory_path2 = '/content/drive/MyDrive/DroughtCastAI/Dataset/ERA5_CSV_OUTPUT'\n",
+        "if (defaultscale=50000) {\n",
+        "    input_directory_path2 = '/content/drive/MyDrive/DroughtCastAI/Dataset/ERA5_OUTPUT'\n",
+        "    output_directory_path2 = '/content/drive/MyDrive/DroughtCastAI/Dataset/ERA5_CSV_OUTPUT'\n",
+        "}else{\n",
+        "    input_directory_path2 = '/content/drive/MyDrive/DroughtCastAI/Dataset100K/Data_XYZ'\n",
+        "    output_directory_path2 = '/content/drive/MyDrive/DroughtCastAI/Dataset100K/Data_CSV'\n",
+        "}\n",
         "input_directory_files2 = os.listdir(input_directory_path2)\n",
         "input_directory_files2.sort()\n",
         "print(\"All files in the directory:\",input_directory_files2);\n",
@@ -982,8 +987,13 @@
     {
       "cell_type": "code",
       "source": [
-        "input_directory_path3 = '/content/drive/MyDrive/DroughtCastAI/Dataset/ERA5_CSV_OUTPUT'\n",
-        "output_directory_path3 = '/content/drive/MyDrive/DroughtCastAI/Dataset/ERA5_COMBINED'\n",
+        "if (defaultscale=50000) {\n",
+        "    input_directory_path3 = '/content/drive/MyDrive/DroughtCastAI/Dataset/ERA5_CSV_OUTPUT'\n",
+        "    output_directory_path3 = '/content/drive/MyDrive/DroughtCastAI/Dataset/ERA5_COMBINED'\n",
+        "}else{\n",
+        "      input_directory_path3 = '/content/drive/MyDrive/DroughtCastAI/Dataset100K/Data_CSV'\n",
+        "      output_directory_path3 = '/content/drive/MyDrive/DroughtCastAI/Dataset100K/Data_COMBINED'\n",
+        "}\n",
         "input_directory_files3 = os.listdir(input_directory_path3)\n",
         "input_directory_files3.sort()\n",
         "print(\"All files in the directory:\",input_directory_files3);\n",
