--- a/DroughtPrediction80k.ipynb
+++ b/DroughtPrediction80k.ipynb
@@ -5409,21 +5409,19 @@
       ],
       "metadata": {
         "id": "TYHG55sJPZUi",
-        "outputId": "bdeb6fec-412e-45fc-e7ba-894d68eb5fb8",
+        "outputId": "8325a461-e7eb-41ea-90a2-bd6fdcb0b769",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "[LibSVM]"
+            "[LibSVM]Mean squared error:  0.9916519271881832\n",
+            "R-squared value:  0.4489609377491204\n"
           ]
         }
       ]
