--- a/RandomForestTestDroughtPrediction200k.ipynb
+++ b/RandomForestTestDroughtPrediction200k.ipynb
@@ -54,7 +54,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tCmSpV-FrBAm",
-        "outputId": "ecaddf53-7a4c-4ee4-854e-1cb1ae81d27f"
+        "outputId": "5fc368fb-cd32-4fca-cb89-374029d5842f"
       },
       "execution_count": 2,
       "outputs": [
@@ -1372,7 +1372,7 @@
         "id": "mOQYwwihueb5",
         "outputId": "4e5f3643-4488-422a-8524-1678137ffecf"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2595,7 +2595,7 @@
         "id": "EFSlngSsLISF",
         "outputId": "017c30f7-0bd2-4c74-c1d7-f5d6c865e29d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -3529,7 +3529,7 @@
           "height": 634
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4198,7 +4198,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4236,7 +4236,7 @@
       "metadata": {
         "id": "HeYBs6gnQ1Ms"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4252,7 +4252,7 @@
           "height": 634
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4926,7 +4926,7 @@
       "metadata": {
         "id": "3-JfD9N7VORS"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4941,7 +4941,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5008,7 +5008,7 @@
           "height": 176
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -5033,7 +5033,7 @@
       "metadata": {
         "id": "DKHMRKOHgLEF"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -5221,26 +5221,26 @@
         "# 4. Split data into features (X) and target (y)\n",
         "\n",
         "#BEFORE COLUMN REMOVAL\n",
-        "# X = processed_dataset[['Lat', 'Lon', 'temperature_2m',\n",
-        "#        'temperature_2m_min', 'temperature_2m_max', 'dewpoint_temperature_2m',\n",
-        "#        'total_precipitation_sum', 'total_precipitation_min',\n",
-        "#        'total_precipitation_max', 'u_component_of_wind_10m',\n",
-        "#        'v_component_of_wind_10m', 'surface_net_solar_radiation_sum',\n",
-        "#        'total_evaporation_sum', 'soil_moisture_am', 'soil_moisture_pm', 'NDVI',\n",
-        "#        'EVI', 'next_month_tempreature', 'next_month_precipitation', 'year', 'month2']]\n",
-        "# y = processed_dataset['spei01']\n",
-        "\n",
-        "X = processed_dataset[['Lat', 'Lon', 'temperature_2m','dewpoint_temperature_2m',\n",
-        "       'total_precipitation_sum', 'u_component_of_wind_10m',\n",
+        "X = processed_dataset[['Lat', 'Lon', 'temperature_2m',\n",
+        "       'temperature_2m_min', 'temperature_2m_max', 'dewpoint_temperature_2m',\n",
+        "       'total_precipitation_sum', 'total_precipitation_min',\n",
+        "       'total_precipitation_max', 'u_component_of_wind_10m',\n",
         "       'v_component_of_wind_10m', 'surface_net_solar_radiation_sum',\n",
-        "       'total_evaporation_sum', 'soil_moisture', 'NDVI',\n",
+        "       'total_evaporation_sum', 'soil_moisture_am', 'soil_moisture_pm', 'NDVI',\n",
         "       'EVI', 'next_month_tempreature', 'next_month_precipitation', 'year', 'month2']]\n",
-        "y = processed_dataset['spei01']"
+        "y = processed_dataset['spei01']\n",
+        "\n",
+        "# X = processed_dataset[['Lat', 'Lon', 'temperature_2m','dewpoint_temperature_2m',\n",
+        "#        'total_precipitation_sum', 'u_component_of_wind_10m',\n",
+        "#        'v_component_of_wind_10m', 'surface_net_solar_radiation_sum',\n",
+        "#        'total_evaporation_sum', 'soil_moisture', 'NDVI',\n",
+        "#        'EVI', 'next_month_tempreature', 'next_month_precipitation', 'year', 'month2']]\n",
+        "# y = processed_dataset['spei01']"
       ],
       "metadata": {
         "id": "Rfb2Mi0IJ8YM"
       },
-      "execution_count": 31,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -5272,7 +5272,7 @@
         "id": "49QV9ygTKtEi",
         "outputId": "26c522f3-b773-4303-f3b4-3fd115111afa"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5427,13 +5427,15 @@
       "metadata": {
         "id": "k12rttG1UHe6"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "rf_regressor = RandomForestRegressor(random_state=42, verbose = 2)\n",
         "\n",
         "parameters = {\n",
         "    'n_estimators': [10, 50, 100, 200],\n",
@@ -5448,7 +5450,7 @@
         "}\n",
         "\n",
         "# 6. Initialize GridSearchCV\n",
-        "grid_search = GridSearchCV(estimator=rf_regressor, param_grid=less_parameters,\n",
+        "grid_search = GridSearchCV(estimator=rf_regressor, param_grid=parameters,\n",
         "                           cv=5, scoring='neg_mean_squared_error', verbose=3, n_jobs=-1)\n",
         "\n",
         "# 7. Perform grid search\n",
@@ -5476,23 +5478,274 @@
       ],
       "metadata": {
         "id": "klmND7soOhd9",
-        "outputId": "2ee35203-0de8-4ec4-dc8a-1a14b5895910",
+        "outputId": "f999a789-a17c-429c-837d-4538ed30c25b",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 245
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-26-8172533d0ef6>\u001b[0m in \u001b[0;36m<cell line: 16>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# 6. Initialize GridSearchCV\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m grid_search = GridSearchCV(estimator=rf_regressor, param_grid=less_parameters,\n\u001b[0m\u001b[1;32m     17\u001b[0m                            cv=5, scoring='neg_mean_squared_error', verbose=3, n_jobs=-1)\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'rf_regressor' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 5 folds for each of 16 candidates, totalling 80 fits\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "building tree 1 of 200\n",
+            "building tree 2 of 200\n",
+            "building tree 3 of 200\n",
+            "building tree 4 of 200\n",
+            "building tree 5 of 200\n",
+            "building tree 6 of 200\n",
+            "building tree 7 of 200\n",
+            "building tree 8 of 200\n",
+            "building tree 9 of 200\n",
+            "building tree 10 of 200\n",
+            "building tree 11 of 200\n",
+            "building tree 12 of 200\n",
+            "building tree 13 of 200\n",
+            "building tree 14 of 200\n",
+            "building tree 15 of 200\n",
+            "building tree 16 of 200\n",
+            "building tree 17 of 200\n",
+            "building tree 18 of 200\n",
+            "building tree 19 of 200\n",
+            "building tree 20 of 200\n",
+            "building tree 21 of 200\n",
+            "building tree 22 of 200\n",
+            "building tree 23 of 200\n",
+            "building tree 24 of 200\n",
+            "building tree 25 of 200\n",
+            "building tree 26 of 200\n",
+            "building tree 27 of 200\n",
+            "building tree 28 of 200\n",
+            "building tree 29 of 200\n",
+            "building tree 30 of 200\n",
+            "building tree 31 of 200\n",
+            "building tree 32 of 200\n",
+            "building tree 33 of 200\n",
+            "building tree 34 of 200\n",
+            "building tree 35 of 200\n",
+            "building tree 36 of 200\n",
+            "building tree 37 of 200\n",
+            "building tree 38 of 200\n",
+            "building tree 39 of 200\n",
+            "building tree 40 of 200\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[Parallel(n_jobs=1)]: Done  40 tasks      | elapsed:  1.0min\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "building tree 41 of 200\n",
+            "building tree 42 of 200\n",
+            "building tree 43 of 200\n",
+            "building tree 44 of 200\n",
+            "building tree 45 of 200\n",
+            "building tree 46 of 200\n",
+            "building tree 47 of 200\n",
+            "building tree 48 of 200\n",
+            "building tree 49 of 200\n",
+            "building tree 50 of 200\n",
+            "building tree 51 of 200\n",
+            "building tree 52 of 200\n",
+            "building tree 53 of 200\n",
+            "building tree 54 of 200\n",
+            "building tree 55 of 200\n",
+            "building tree 56 of 200\n",
+            "building tree 57 of 200\n",
+            "building tree 58 of 200\n",
+            "building tree 59 of 200\n",
+            "building tree 60 of 200\n",
+            "building tree 61 of 200\n",
+            "building tree 62 of 200\n",
+            "building tree 63 of 200\n",
+            "building tree 64 of 200\n",
+            "building tree 65 of 200\n",
+            "building tree 66 of 200\n",
+            "building tree 67 of 200\n",
+            "building tree 68 of 200\n",
+            "building tree 69 of 200\n",
+            "building tree 70 of 200\n",
+            "building tree 71 of 200\n",
+            "building tree 72 of 200\n",
+            "building tree 73 of 200\n",
+            "building tree 74 of 200\n",
+            "building tree 75 of 200\n",
+            "building tree 76 of 200\n",
+            "building tree 77 of 200\n",
+            "building tree 78 of 200\n",
+            "building tree 79 of 200\n",
+            "building tree 80 of 200\n",
+            "building tree 81 of 200\n",
+            "building tree 82 of 200\n",
+            "building tree 83 of 200\n",
+            "building tree 84 of 200\n",
+            "building tree 85 of 200\n",
+            "building tree 86 of 200\n",
+            "building tree 87 of 200\n",
+            "building tree 88 of 200\n",
+            "building tree 89 of 200\n",
+            "building tree 90 of 200\n",
+            "building tree 91 of 200\n",
+            "building tree 92 of 200\n",
+            "building tree 93 of 200\n",
+            "building tree 94 of 200\n",
+            "building tree 95 of 200\n",
+            "building tree 96 of 200\n",
+            "building tree 97 of 200\n",
+            "building tree 98 of 200\n",
+            "building tree 99 of 200\n",
+            "building tree 100 of 200\n",
+            "building tree 101 of 200\n",
+            "building tree 102 of 200\n",
+            "building tree 103 of 200\n",
+            "building tree 104 of 200\n",
+            "building tree 105 of 200\n",
+            "building tree 106 of 200\n",
+            "building tree 107 of 200\n",
+            "building tree 108 of 200\n",
+            "building tree 109 of 200\n",
+            "building tree 110 of 200\n",
+            "building tree 111 of 200\n",
+            "building tree 112 of 200\n",
+            "building tree 113 of 200\n",
+            "building tree 114 of 200\n",
+            "building tree 115 of 200\n",
+            "building tree 116 of 200\n",
+            "building tree 117 of 200\n",
+            "building tree 118 of 200\n",
+            "building tree 119 of 200\n",
+            "building tree 120 of 200\n",
+            "building tree 121 of 200\n",
+            "building tree 122 of 200\n",
+            "building tree 123 of 200\n",
+            "building tree 124 of 200\n",
+            "building tree 125 of 200\n",
+            "building tree 126 of 200\n",
+            "building tree 127 of 200\n",
+            "building tree 128 of 200\n",
+            "building tree 129 of 200\n",
+            "building tree 130 of 200\n",
+            "building tree 131 of 200\n",
+            "building tree 132 of 200\n",
+            "building tree 133 of 200\n",
+            "building tree 134 of 200\n",
+            "building tree 135 of 200\n",
+            "building tree 136 of 200\n",
+            "building tree 137 of 200\n",
+            "building tree 138 of 200\n",
+            "building tree 139 of 200\n",
+            "building tree 140 of 200\n",
+            "building tree 141 of 200\n",
+            "building tree 142 of 200\n",
+            "building tree 143 of 200\n",
+            "building tree 144 of 200\n",
+            "building tree 145 of 200\n",
+            "building tree 146 of 200\n",
+            "building tree 147 of 200\n",
+            "building tree 148 of 200\n",
+            "building tree 149 of 200\n",
+            "building tree 150 of 200\n",
+            "building tree 151 of 200\n",
+            "building tree 152 of 200\n",
+            "building tree 153 of 200\n",
+            "building tree 154 of 200\n",
+            "building tree 155 of 200\n",
+            "building tree 156 of 200\n",
+            "building tree 157 of 200\n",
+            "building tree 158 of 200\n",
+            "building tree 159 of 200\n",
+            "building tree 160 of 200\n",
+            "building tree 161 of 200\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:  4.1min\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "building tree 162 of 200\n",
+            "building tree 163 of 200\n",
+            "building tree 164 of 200\n",
+            "building tree 165 of 200\n",
+            "building tree 166 of 200\n",
+            "building tree 167 of 200\n",
+            "building tree 168 of 200\n",
+            "building tree 169 of 200\n",
+            "building tree 170 of 200\n",
+            "building tree 171 of 200\n",
+            "building tree 172 of 200\n",
+            "building tree 173 of 200\n",
+            "building tree 174 of 200\n",
+            "building tree 175 of 200\n",
+            "building tree 176 of 200\n",
+            "building tree 177 of 200\n",
+            "building tree 178 of 200\n",
+            "building tree 179 of 200\n",
+            "building tree 180 of 200\n",
+            "building tree 181 of 200\n",
+            "building tree 182 of 200\n",
+            "building tree 183 of 200\n",
+            "building tree 184 of 200\n",
+            "building tree 185 of 200\n",
+            "building tree 186 of 200\n",
+            "building tree 187 of 200\n",
+            "building tree 188 of 200\n",
+            "building tree 189 of 200\n",
+            "building tree 190 of 200\n",
+            "building tree 191 of 200\n",
+            "building tree 192 of 200\n",
+            "building tree 193 of 200\n",
+            "building tree 194 of 200\n",
+            "building tree 195 of 200\n",
+            "building tree 196 of 200\n",
+            "building tree 197 of 200\n",
+            "building tree 198 of 200\n",
+            "building tree 199 of 200\n",
+            "building tree 200 of 200\n",
+            "Best Parameters: {'max_depth': None, 'n_estimators': 200}\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[Parallel(n_jobs=1)]: Done  40 tasks      | elapsed:    0.3s\n",
+            "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    1.2s\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean Squared Error of Best Model for SPEI: 0.8667386021589187\n"
           ]
         }
       ]
@@ -5543,7 +5796,7 @@
       "metadata": {
         "id": "vCabLM-tPS7_"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5558,7 +5811,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5598,7 +5851,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5673,7 +5926,7 @@
         },
         "outputId": "a56cbad9-8fd6-4822-f22c-eaa6ba409a09"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5712,7 +5965,7 @@
       "metadata": {
         "id": "AFU1bb5q7ltt"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
